# Logistics-Document-Generator

./: .gitignore  DEPLOYMENT_GUIDE.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  SECURITY.md  environment.yml  placard_generator.py  placard_generator_gui.py  pyproject.toml  requirements.txt  security_utils.py  setup.py
Template/: placard_template.docx
logistics_generator/: __init__.py  cli.py  config.py  core.py  gui.py  utils.py
